--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 scikit-learn==1.4.0
 twilio==7.12.1
-prometheus_client==0.20.0
+Flask == 2.3.2
+prometheus_client==0.14.0
 gradio_client==0.2.7
 prometheus_fastapi_instrumentator==7.0.0
